--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,6 @@
 
 Игра для детей от 12 до 159 лет.
 
-Учебное приложение курса по Ruby on Rails от «Хорошего программиста». В продакшене настроено на работу с Heroku.
+В продакшене настроено на работу с Heroku.
 
-© http://goodprogrammer.ru
+© будущий программист
